refactor: Refactored AudioPlayer to use HttpRequest and send the players a message about enable download sounds if their playback keeps on failing